name:           crctest
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/tauli/filemeta#readme>
homepage:       https://github.com/tauli/filemeta#readme
bug-reports:    https://github.com/tauli/filemeta/issues
author:         Jürgen Peters
maintainer:     taulmarill@xgn.de
copyright:      2018 Jürgen Peters
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/tauli/crctest

executable crctest
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -O2
  build-depends:
      base >=4.7 && <5
    , ansi-terminal
    , bytestring
    , digest
    , directory
    , pcre-heavy
  other-modules:
  default-language: Haskell2010

